--- a/dbf-core/src/Makefile.in
+++ b/dbf-core/src/Makefile.in
@@ -1,12 +1,14 @@
 # Makefile for dbf, src directory
-# Version: 0.6
 
 include ../Makefile.rules
 
-dbf: $(OBJ)
-	$(CC) $(CFLAGS) -o $(BIN) $(OBJ)	
+all: $(LIBOBJ) $(GUIOBJ)
+	ar rc libdbf.a $(LIBOBJ)
+	ranlib libdbf.a
 
-all: dbf
+	$(CC) $(CFLAGS) -I$(PWD)/src -L$(PWD)/src -o $(BIN) $(GUIOBJ) -ldbf
 
 clean:
 	rm *.o
+	rm $(BIN)
+	rm libdbf.a
