- took out dbf_Open.sgml

--- a/libdbf/doc/Makefile.am
+++ b/libdbf/doc/Makefile.am
@@ -14,8 +14,7 @@ distclean: clean
 clean:
 	rm -f ${man_MANS}
 
-SGML_FILES = \
-	dbf_Open.sgml
+SGML_FILES = 
 
 EXTRA_DIST = ${SGML_FILES} libdbf.sgml
 
