--- a/libdbf/libdbf.spec.in
+++ b/libdbf/libdbf.spec.in
@@ -3,15 +3,15 @@
 %define prefix   /usr
 
 Summary: Library for reading dbase files
-Name: pslib
+Name: libdbf
 Version: %ver
 Release: 1
 Copyright: LGPL
 Group: Development/Libraries
-Source: http://prdownloads.sourceforge.net/pslib/pslib-%{ver}.tar.gz
+Source: http://prdownloads.sourceforge.net/libdbf/libdbf-%{ver}.tar.gz
 BuildRoot: /var/tmp/libdbf-%{PACKAGE_VERSION}-root
 
-URL: http://pslib.sourceforge.net/
+URL: http://libdbf.sourceforge.net/
 Docdir: %{prefix}/doc
 
 %description
