--- a/libdbf/Makefile.am
+++ b/libdbf/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS = include src po $(DOCDIR)
 
 spec = libdbf.spec
 
-EXTRA_DIST = $(spec) $(spec).in autogen.sh libdbf.pc.in intltool-extract.in intltool-merge.in intltool-update.in
+EXTRA_DIST = $(spec) $(spec).in autogen.sh libdbf.pc.in intltool-extract.in intltool-merge.in intltool-update.in man
 
 #all-local: $(spec)
 
