- added noinst_HEADERS

--- a/dbf-core/src/Makefile.am
+++ b/dbf-core/src/Makefile.am
@@ -8,3 +8,4 @@ dbf_SOURCES = dbf.c csv.c sql.c codepages.c statistic.c congraph.c
 
 dbf_LDADD = $(DBFLIB_LIBDIR) $(DBFLIB_LIBS)
 
+noinst_HEADERS = dbf.h csv.h sql.h codepages.h statistic.h congraph.h
