--- a/dbf-core/Makefile.am
+++ b/dbf-core/Makefile.am
@@ -4,7 +4,7 @@ SUBDIRS = src po $(DOCDIR)
 
 spec = $(PACKAGE).spec
 
-EXTRA_DIST = COPYING INSTALL intltool-extract.in intltool-merge.in intltool-update.in $(spec) $(spec).in autogen.sh
+EXTRA_DIST = COPYING AUTHORS INSTALL intltool-extract.in intltool-merge.in intltool-update.in $(spec) $(spec).in autogen.sh
 
 rpm: $(distdir).tar.gz
 	rpm -ta $(distdir).tar.gz
