--- a/libdbf/configure.in
+++ b/libdbf/configure.in
@@ -32,11 +32,13 @@ AC_PATH_PROG(MV, mv, /bin/mv)
 AC_PATH_PROG(TAR, tar, /bin/tar)
 
 dnl Add the languages which your application supports here.
-ALL_LINGUAS="de"
-AM_GLIB_GNU_GETTEXT
-GETTEXT_PACKAGE=libdbf
-AC_SUBST(GETTEXT_PACKAGE)
+dnl ALL_LINGUAS="de"
+AC_SUBST(ALL_LINGUAS, "de")
+AM_GNU_GETTEXT_VERSION(0.14.1)
+dnl GETTEXT_PACKAGE=libdbf
+AC_SUBST(GETTEXT_PACKAGE, libdbf)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", GETTEXT_PACKAGE)
+AM_GLIB_GNU_GETTEXT
 
 AC_PROG_LIBTOOL
 
