--- a/libdbf/configure.in
+++ b/libdbf/configure.in
@@ -5,7 +5,8 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
 AM_MAINTAINER_MODE
 AM_CONFIG_HEADER(config.h)
-AC_PROG_INTLTOOL
+dnl -- BERG: AC_PROG_INTLTOOL does not work with MinGW on Windows
+dnl AC_PROG_INTLTOOL
 
 AC_CANONICAL_HOST
 
@@ -31,14 +32,15 @@ AC_PATH_PROG(RM, rm, /bin/rm)
 AC_PATH_PROG(MV, mv, /bin/mv)
 AC_PATH_PROG(TAR, tar, /bin/tar)
 
+dnl -- BERG: GETTEXT does not work with MinGW on Windows
 dnl Add the languages which your application supports here.
 dnl ALL_LINGUAS="de"
-AC_SUBST(ALL_LINGUAS, "de")
-AM_GNU_GETTEXT_VERSION(0.14.1)
+dnl AC_SUBST(ALL_LINGUAS, "de")
+dnl AM_GNU_GETTEXT_VERSION(0.14.1)
 dnl GETTEXT_PACKAGE=libdbf
-AC_SUBST(GETTEXT_PACKAGE, libdbf)
-AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", GETTEXT_PACKAGE)
-AM_GLIB_GNU_GETTEXT
+dnl AC_SUBST(GETTEXT_PACKAGE, libdbf)
+dnl AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", GETTEXT_PACKAGE)
+dnl AM_GLIB_GNU_GETTEXT
 
 AC_PROG_LIBTOOL
 
